--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -12,9 +12,10 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4">
       <div class="container-fluid">
         <a class="navbar-brand" href="{{ url_for('dashboard') }}">
-          Relationship between invasive measurements and non-invasive Echocardiogram (ECHO) guided parameters of Right atrial pressure (RAP)
+          <!-- Relationship between invasive measurements and non-invasive Echocardiogram (ECHO) guided parameters of Right atrial pressure (RAP)
           A Prospective Observational study - HREA 
-          Sage ID: 2024/PID00314 - 2024/SVH00230
+          Sage ID: 2024/PID00314 - 2024/SVH00230 -->
+          ECHO Database
         </a>
       </div>
     </nav>
@@ -40,3 +41,5 @@
     {% block scripts %}{% endblock %}
   </body>
 </html>
+
+
