--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -10,12 +10,9 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4">
-      <div class="container-fluid">
+      <div class="container-fluid justify-content-center">
         <a class="navbar-brand" href="{{ url_for('dashboard') }}">
-          <!-- Relationship between invasive measurements and non-invasive Echocardiogram (ECHO) guided parameters of Right atrial pressure (RAP)
-          A Prospective Observational study - HREA 
-          Sage ID: 2024/PID00314 - 2024/SVH00230 -->
-          ECHO Database
+          Relationship between invasive measurements and non-invasive Echocardiogram guided parameters of Right Atrial Pressure 
         </a>
       </div>
     </nav>
