--- a/src/templates/form.html
+++ b/src/templates/form.html
@@ -17,11 +17,18 @@
 <script src="{{ url_for('static', filename='js/time.js') }}"></script>
 
 
-<h1>{{ form_title }}</h1>
-<hr>
+
 
 <form method="POST" action="{{ form_action }}" novalidate>
   {{ form.csrf_token }}
+  <div class="d-flex justify-content-between align-items-center mt-4 mb-4">
+    <h1 class="mb-0">{{ form_title }}</h1>
+    <div>
+      {{ form.submit(class="btn btn-primary") }}
+      <a href="{{ url_for('dashboard') }}" class="btn btn-secondary ms-2">Cancel</a>
+    </div>
+  </div>
+  <hr>
   
   <!-- Section 1: Patient Information & Setup -->
   <fieldset class="record-form-section">
