req change: new medication

--- a/src/templates/form.html
+++ b/src/templates/form.html
@@ -123,8 +123,8 @@
         <legend class="mb-3">Inotropes / Vasopressors / Vasodilators</legend>
         <label class="form-label">Medications</label>
         <div class="form-check">
-          {{ form.medication_aramine(class="form-check-input") }}
-          {{ form.medication_aramine.label(class="form-check-label") }}
+          {{ form.medication_metaraminol(class="form-check-input") }}
+          {{ form.medication_metaraminol.label(class="form-check-label") }}
         </div>
         <div class="form-check">
           {{ form.medication_noradrenaline(class="form-check-input") }}
