--- a/src/templates/print.html
+++ b/src/templates/print.html
@@ -295,7 +295,7 @@
                 <fieldset class="h-100">
                     <legend>Inotropes/Vasopressors</legend>
                      <div > 
-                        <span class="checkbox-symbol">{{ 'X' if record.medication_aramine else ' ' }}</span> Aramine
+                        <span class="checkbox-symbol">{{ 'X' if record.medication_metaraminol else ' ' }}</span> Metaraminol
                         <span class="checkbox-symbol ms-2">{{ 'X' if record.medication_noradrenaline else ' ' }}</span> Noradrenaline
                         <span class="checkbox-symbol ms-2">{{ 'X' if record.medication_adrenaline else ' ' }}</span> Adrenaline
                         <br>
