--- a/src/templates/print.html
+++ b/src/templates/print.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Print Record - {{ record.patient_ur }}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
     <style>
         
         body {
